# gmail-mcp

./: .gitignore  .mcpbignore  CLAUDE.md  README.md  agent.md  manifest.json  pyproject.toml
.claude/skills/account-overview/: SKILL.md
.claude/skills/bulk-cleanup/: SKILL.md
.claude/skills/compose-email/: SKILL.md
.claude/skills/inbox-triage/: SKILL.md
.claude/skills/search-emails/: SKILL.md
.github/workflows/: publish.yml
docs/: gmail-api-setup.md
src/: run_server.py
src/gmail_mcp/: __init__.py  __main__.py  accounts.py  auth.py  server.py
src/gmail_mcp/tools/: __init__.py  attachments.py  drafts.py  filters.py  history.py  labels.py  messages.py  settings.py  threads.py
tests/: conftest.py  test_accounts.py  test_attachments.py  test_drafts.py  test_filters.py  test_history.py  test_labels.py  test_messages.py  test_server.py  test_settings.py  test_slim_response.py  test_threads.py
