[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-mcp-ldraney"
version = "0.1.2"
description = "MCP server for Gmail — read, triage, draft, and send across multiple accounts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Lucas Draney"}]
keywords = ["gmail", "mcp", "email", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Email",
]
dependencies = [
    "mcp>=1.0",
    "gmail-sdk-ldraney>=0.1.2",
]

[tool.uv.sources]
gmail-sdk-ldraney = { path = "../gmail-sdk", editable = true }

[project.scripts]
gmail-mcp-ldraney = "gmail_mcp.server:main"

[project.urls]
Repository = "https://github.com/ldraney/gmail-mcp"
Issues = "https://github.com/ldraney/gmail-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
